fix email addresses

--- a/content/contactenos.html
+++ b/content/contactenos.html
@@ -2,8 +2,8 @@
 title: Contáctenos
 meta_description: Contáctenos aquí
 menu:
-  principal:
-    weight: 9
+principal:
+weight: 9
 _template: inicio
 ---
 
@@ -11,29 +11,50 @@ _template: inicio
 
 
 <div class="container-container">
-<div class="contact-form-left">
-<form class="contact-form" name="contacto" action="gracias" netlify-honeypot="adios" netlify>
-<p class="visually-hidden">
-<label><input name="adios"></label>
-</p>
-<label for="nombre" class="requerido">Nombre</label>
-<input type="text" name="nombre" id="nombre" required/>
-<label for="email" class="requerido">Correo electrónico</label>
-<input type="text" name="email" id="email" required/>
-<label for="telefono" class="requerido">Teléfono</label>
-<input type="text" name="telefono" id="telefono" required/>
-<label for="subject">Asunto</label>
-<input type="text" name="subject" id="subject" />
-<label for="mensaje" class="requerido">Mensaje</label>
-<textarea name="mensaje" required></textarea>
-<input type="submit" value="Enviar" class="btn btn-primary" id="mensaje" />
-</form>
+  <div class="contact-form-left">
+    <form class="contact-form" name="contacto" action="gracias" netlify-honeypot="adios" netlify>
+      <p class="visually-hidden">
+        <label><input name="adios"></label>
+      </p>
+      <label for="nombre" class="requerido">Nombre</label>
+      <input type="text" name="nombre" id="nombre" required />
+      <label for="email" class="requerido">Correo electrónico</label>
+      <input type="text" name="email" id="email" required />
+      <label for="telefono" class="requerido">Teléfono</label>
+      <input type="text" name="telefono" id="telefono" required />
+      <label for="subject">Asunto</label>
+      <input type="text" name="subject" id="subject" />
+      <label for="mensaje" class="requerido">Mensaje</label>
+      <textarea name="mensaje" required></textarea>
+      <input type="submit" value="Enviar" class="btn btn-primary" id="mensaje" />
+    </form>
+  </div>
+
+  <div class="contact-info">
+    <h2>Información</h2>
+    <ul>
+      <li> <svg viewBox="0 0 8 8" class="icon">
+          <use xlink:href="/open-iconic.svg#map-marker"></use>
+        </svg> De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén </li>
+      <li> <svg viewBox="0 0 8 8" class="icon">
+          <use xlink:href="/open-iconic.svg#location"></use>
+        </svg> Heredia </li>
+      <li> <svg viewBox="0 0 8 8" class="icon">
+          <use xlink:href="/open-iconic.svg#inbox"></use>
+        </svg> 650-4005 </li>
+      <li> <svg viewBox="0 0 8 8" class="icon">
+          <use xlink:href="/open-iconic.svg#globe"></use>
+        </svg> Costa Rica </li>
+      <li><svg viewBox="0 0 8 8" class="icon">
+          <use xlink:href="/open-iconic.svg#envelope-closed"></use>
+        </svg> <a href="mailto:sac@novatec.cr">sac@novatec.cr</a></li>
+      </li>
+      <li> <svg viewBox="0 0 8 8" class="icon">
+          <use xlink:href="/open-iconic.svg#phone"></use>
+        </svg> +506 2239-1111 </li>
+      <li> <svg viewBox="0 0 8 8" class="icon">
+          <use xlink:href="/open-iconic.svg#phone"></use>
+        </svg> +506 2239-1212 </li>
+    </ul>
+  </div>
 </div>
-
-<div class="contact-info"> <h2>Información</h2> <ul> <li> <svg viewBox="0 0 8 8" class="icon"> <use xlink:href="/open-iconic.svg#map-marker"></use> </svg> De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén </li> <li> <svg viewBox="0 0 8 8" class="icon"> <use xlink:href="/open-iconic.svg#location"></use> </svg> Heredia </li> <li> <svg viewBox="0 0 8 8" class="icon"> <use xlink:href="/open-iconic.svg#inbox"></use> </svg> 650-4005 </li> <li> <svg viewBox="0 0 8 8" class="icon"> <use xlink:href="/open-iconic.svg#globe"></use> </svg> Costa Rica </li> <li> <svg viewBox="0 0 8 8" class="icon"> <use xlink:href="/open-iconic.svg#envelope-closed"></use> </svg>
-
-<li>ventas@novatec.cr</li>
-
-<li>para cotizaciones: sac@novatec.cr</li>
-
-</li> <li> <svg viewBox="0 0 8 8" class="icon"> <use xlink:href="/open-iconic.svg#phone"></use> </svg> +506 2239-1111 </li> <li> <svg viewBox="0 0 8 8" class="icon"> <use xlink:href="/open-iconic.svg#phone"></use> </svg> +506 2239-1212 </li> </ul> </div></div>
